MAT-9488 fixing spacing issues and adding a period to the success message
Former-commit-id: a1d700a167f6ae2df4c669736e6a99fa123df256

--- a/war/Mat.css
+++ b/war/Mat.css
@@ -149,6 +149,14 @@ left:50px;
     width: 250px; 
 }
 
+#measureNameContainer{
+	width: 350px;
+}
+
+#aliasContainer{
+	width: 150px;
+}
+
 #appliedComponentContainer{
 	width: 100px;
 }
